applications/websites/henk.wesl.io/service.yml
apiVersion: v1
kind: Service
metadata:
  name: henk-svc
  namespace: ns-wesley
spec:
  selector:
    app: henk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
