applications/websites/henk.wesl.io/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: henk-ingress-route
  namespace: ns-wesley
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`henk.wesl.io`)
      kind: Rule
      services:
        - name: henk-svc
          port: 80
